--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-.meta {
-    margin-left: 0;
-    margin-right: auto;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
 
 
 .menu{
