--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
+
+
 body {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
-
 .menu{
+    margin-top: 13px;
     /* рамка */
     border-style:solid;
     border-color: rgb(218, 218, 218);
     border-width: 1px;
     /* основные настройки */
-    width:350px;
+    width:340px;
     height: 320px;
 }
 .menu2{
@@ -21,7 +22,7 @@ body {
     border-color: rgb(218, 218, 218);
     border-width: 1px;
     /* основные настройки */
-    width:350px;
+    width:340px;
     height: 70px;
     font-family:Arial, Helvetica, sans-serif ;
     color: rgb(94, 94, 94);
@@ -29,7 +30,7 @@ body {
 }
 .menu3{
     /* основные настройки */
-    width:350px;
+    width:340px;
     font-family:monospace ;
     color: rgb(65, 65, 65);
     font-size: 14px;
